# BabylonDemoProject

./: CMakeLists.txt  CMakePresets.json  README.md
src/App/: AppConfigurator.h  Main.cpp
tools/: gen_win_vs_clang.cmd  gen_win_vs_msvc.cmd
